--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": ">=18"
+    "node": "20.11.1"
   },
   "scripts": {
     "start": "node server.js",
@@ -12,7 +12,7 @@
     "seed:once": "node tools/seed-once.js"
   },
   "dependencies": {
-    "better-sqlite3": "^9.4.0",
+    "better-sqlite3": "^12.2.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
